workspace-sf/force-app/main/default/objects/ContabilizacaoValores__c/ContabilizacaoValores__c.object-meta.xml
<CustomObject>
    <description>Objeto criado para armazenar os prêmios emitidos.</description>
    <label>Contabilização de valores</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contabilizações de valores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>