workspace-sf/force-app/main/default/objects/ContabilizacaoValores__c/fields/Carregamento__c.field-meta.xml
<CustomField>
    <fullName>Carregamento__c</fullName>
    <label>Carregamento</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>