workspace-sf/force-app/main/default/objects/ContabilizacaoValores__c/fields/CodigoPlanoSusep__c.field-meta.xml
<CustomField>
    <fullName>CodigoPlanoSusep__c</fullName>
    <label>Código do plano SUSEP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>