workspace-sf/force-app/main/default/objects/ContabilizacaoValores__c/fields/ContribuicaoComercial__c.field-meta.xml
<CustomField>
    <fullName>ContribuicaoComercial__c</fullName>
    <label>Contribuição comercial</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>