workspace-sf/force-app/main/default/objects/ContabilizacaoValores__c/fields/ContribuicaoPura__c.field-meta.xml
<CustomField>
    <fullName>ContribuicaoPura__c</fullName>
    <label>Contribuição pura</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>