workspace-sf/force-app/main/default/objects/ContabilizacaoValores__c/fields/CustosIniciais__c.field-meta.xml
<CustomField>
    <fullName>CustosIniciais__c</fullName>
    <label>Custos iniciais</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>