workspace-sf/force-app/main/default/objects/ContabilizacaoValores__c/fields/Modalidade__c.field-meta.xml
<CustomField>
    <fullName>Modalidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modalidade</label>
    <referenceTo>Modalidade__c</referenceTo>
    <relationshipName>ContabilizacaoValores</relationshipName>
    <type>Lookup</type>
</CustomField>