workspace-sf/force-app/main/default/objects/ContabilizacaoValores__c/fields/NumeroSusep__c.field-meta.xml
<CustomField>
    <fullName>NumeroSusep__c</fullName>
    <label>Número SUSEP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>