workspace-sf/force-app/main/default/objects/ContabilizacaoValores__c/fields/ParticipantesCancelados__c.field-meta.xml
<CustomField>
    <fullName>ParticipantesCancelados__c</fullName>
    <label>Participantes cancelados</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>