workspace-sf/force-app/main/default/objects/ContabilizacaoValores__c/fields/ParticipantesExcluidos__c.field-meta.xml
<CustomField>
    <fullName>ParticipantesExcluidos__c</fullName>
    <label>Participantes excluídos</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>