workspace-sf/force-app/main/default/objects/ContabilizacaoValores__c/fields/ParticipantesIncluidos__c.field-meta.xml
<CustomField>
    <fullName>ParticipantesIncluidos__c</fullName>
    <label>Participantes incluídos</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>