workspace-sf/force-app/main/default/objects/ContabilizacaoValores__c/fields/PremioLiquido__c.field-meta.xml
<CustomField>
    <fullName>PremioLiquido__c</fullName>
    <label>Prêmio liquido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>