workspace-sf/force-app/main/default/objects/ContabilizacaoValores__c/fields/QuantidadeVidas__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeVidas__c</fullName>
    <label>Quantidade de vidas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>