workspace-sf/force-app/main/default/objects/ContabilizacaoValores__c/fields/TipoParcela__c.field-meta.xml
<CustomField>
    <fullName>TipoParcela__c</fullName>
    <label>Tipo de Parcela</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Emissao</fullName>
                <label>Emissão</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>