workspace-sf/force-app/main/default/objects/ContabilizacaoValores__c/fields/TipoRegistro__c.field-meta.xml
<CustomField>
    <fullName>TipoRegistro__c</fullName>
    <label>Tipo de Registro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Emitido</fullName>
            </value>
            <value>
                <fullName>Cobrado</fullName>
            </value>
            <value>
                <fullName>Sinistro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>