workspace-sf/force-app/main/default/objects/ContabilizacaoValores__c/fields/TipoRenda__c.field-meta.xml
<CustomField>
    <fullName>TipoRenda__c</fullName>
    <label>Tipo de renda</label>
    <length>255</length>
    <type>Text</type>
</CustomField>