workspace-sf/force-app/main/default/objects/ContabilizacaoValores__c/fields/ValorBeneficio__c.field-meta.xml
<CustomField>
    <fullName>ValorBeneficio__c</fullName>
    <description>História 4354</description>
    <label>Valor Benefício</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>