workspace-sf/force-app/main/default/objects/ContabilizacaoValores__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NumeroSusep__c</columns>
    <columns>Data__c</columns>
    <columns>RamoSeguro__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TipoRegistro__c</field>
        <operation>equals</operation>
        <value>Emitido</value>
    </filters>
    <label>Todos os prêmios emitidos</label>
</ListView>