workspace-sf/force-app/main/default/objects/ContabilizacaoValores__c/listViews/Todos_os_sinistros_pagos.listView-meta.xml
<ListView>
    <fullName>Todos_os_sinistros_pagos</fullName>
    <columns>NAME</columns>
    <columns>NumeroSusep__c</columns>
    <columns>Data__c</columns>
    <columns>RamoSeguro__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TipoRegistro__c</field>
        <operation>equals</operation>
        <value>Sinistro</value>
    </filters>
    <label>Todos os sinistros pagos</label>
</ListView>